@@ -60,6 +60,7 @@ PHP                                                                        NEWS
 - Fixed bug #29983 (PHP does not explicitly set mime type & charset). (Ilia)
 - Fixed bug #33153 (crash in mssql_next result). (Frank)
 - Fixed bug #32009 (crash when mssql_bind() is called more than once). (Frank)
+- Fixed bug #33963 (mssql_bind() fails on input parameters). (Frank)
 
 05 Sep 2005, PHP 5.0.5
 - Upgraded PCRE library to version 5.0. (Andrei)
